# Knowledge_Graph

./: README.md  output_tables.txt  output_tables_bounded.txt  output_tables_detected.txt  pyproject.toml  requirements.txt
wobb_ai/: app.py  config.py  logging_config.py  main.py
wobb_ai/data_extraction/: __init__.py  document_processing.py  table_extraction.py  text_extraction.py
wobb_ai/data_extraction/parsers/: csv_parser.py  docx_parser.py  image_parser.py  json_parser.py  pdf_image_parser.py  pdf_parser.py
wobb_ai/evaluation/: metrics.py
wobb_ai/final_evaluation/: __init__.py  evaluation.py  metrics.py
wobb_ai/graph_population/: __init__.py  graph_query.py  knowledge_graph.py  visualization.py
wobb_ai/output/: pipeline_output.txt
wobb_ai/prompts/: __init__.py  dynamic_prompts.py
wobb_ai/schema_inference/: __init__.py  conflict_resolution.py  entity_relationship_extraction.py  schema_inference.py
wobb_ai/tests/: test_conflict_resolution.py  test_document_processing.py  test_dynamic_prompts.py  test_entity_relationship_extraction.py  test_graph_query.py  test_knowledge_graph.py  test_metrics.py  test_schema_inference.py  test_text_extraction.py  test_visualization.py
wobb_ai/utils/: formatter.py
