[tool.poetry]
name = "wobb-ai"
version = "0.1.0"
description = ""
authors = ["Prasanth Thiagarajan <prasanth33460@gmail.com>"]
readme = "README.md"
packages = [{ include = "wobb_ai" }]

[tool.poetry.dependencies]
python = "^3.12"
spacy = "^3.8.2"
networkx = "^3.4.2"
rdflib = "^7.1.1"
pdfplumber = "^0.11.4"
pytesseract = "^0.3.13"
beautifulsoup4 = "^4.12.3"
streamlit = "^1.40.2"
pdfminer-six = "20231228"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
