[tool.poetry]
name = "wobb-ai"
version = "0.1.0"
description = ""
authors = ["Prasanth Thiagarajan <prasanth33460@gmail.com>"]
readme = "README.md"
packages = [{ include = "wobb_ai" }]

[tool.poetry.dependencies]
python = "^3.12"
spacy = "^3.8.2"
networkx = "^3.4.2"
rdflib = "^7.1.1"
pdfplumber = "^0.11.4"
pytesseract = "^0.3.13"
beautifulsoup4 = "^4.12.3"
streamlit = "^1.40.2"
pdfminer-six = "20231228"
pillow = "^11.0.0"
scikit-learn = "^1.5.2"
nltk = "^3.9.1"
pandas = "^2.2.3"
requests = "^2.32.3"
python-docx = "^1.1.2"
transformers = "^4.46.3"
pypdf2 = "^3.0.1"
neo4j = "^5.27.0"
pyvis = "^0.3.2"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
py2neo = "^2021.2.4"
rich = "10.15.2"
pygments = ">=2.6.0,<3.0.0"
camelot = "^12.6.29"
camelot-py = "^0.11.0"
tabula = "^1.0.5"
pymupdf = "^1.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"